--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>word contol</title>
-</head>
-<body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="index.js"></script>
-
-    <h3 id="controllingUser"></h3>
-    <pre id="messageBox"></pre>
-    <input type="text" placeholder="hold my text" id="inputBox" onkeyup="print()">
-    <button id = "Button">print</button>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+        <title>
+            Story Board
+        </title>
+        <meta http-equiv="X-UA-Compatible" content="IE=7">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta name="description" content="write a story together with a shared text editor">
+    </head>
+    <body>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="socket.js"></script>
+        <div id="controllingUser">waiting for game to begin..</div>
+        <textarea style="resize: none" rows="30" cols="62" id="messageBox" onkeyup="send()"></textarea>
+    </body>
 </html>
