turn logic implemented
Things done:
>turn logic implemented
>game status highlighted

Things that need fixing:
>Instead of broadcasting individual letters broadcast words and add extra functionality buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="socket.js"></script>
         <div id="controllingUser">waiting for game to begin..</div>
-        <textarea style="resize: none" rows="30" cols="62" id="messageBox" onkeyup="send()"></textarea>
+        <textarea style="resize: none" rows="30" cols="62" id="messageBox"></textarea>
     </body>
 </html>
