--- a/public/index.html
+++ b/public/index.html
@@ -8,95 +8,127 @@
                 margin: 0%;
             }
             .leaderboard{
-                background-color: aliceblue;
+                background-color: rgb(79, 163, 236);
                 border-radius: 10px;
                 position: absolute;
                 height: 86%;
-                width: 18%;
+                width: 24%;
                 right: 2%;
                 top: 4%;
             }
             .leaderboard h3{
                 font-family: Arial, Helvetica, sans-serif;
+                color: antiquewhite;
                 text-align: center;
             }
             .box-container{
-                background-color: antiquewhite;
+                background-color: rgb(79, 163, 236);
                 border-radius: 10px;
+                width: 70vw;
+                height: 86vh;
                 position: absolute;
-                width: 70%;
-                height: 86%;
                 left: 2%;
                 top: 4%;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                align-items: center;
             }
-            .box-container .voted-storybox{
-                background-color: white;
+            .box-container > .voted-storybox{
+                background-color: antiquewhite;
                 border-radius: 10px;
-                box-shadow: 0px 4px 8px 1px; /* added this just to differentiate between box container and voted box */
-                position: absolute;
-                width: 91%;
+                width: 94%;
                 height: 70%;
-                left: 4%;
-                top: 5%;
+                /* box-shadow: 0px 4px 8px 1px;*/
+                /* position: absolute; */
+                /* left: 4%; */
+                /* top: 5%; */
             }
             .box-container .enter-box{
                 font-size: large;
                 font-family: Arial, Helvetica, sans-serif;
                 border-radius: 10px;
-                position: absolute;
-                width: 78%;
-                left: 4%;
-                bottom: 5%;
+                width: 88%;
+                background-color: antiquewhite;
+                /* position: absolute; */
+                /* left: 4%; */
+                /* bottom: 5%; */
             }
             .box-container button{
-                border-radius: 50px; /* circle button hoga similar to whatsapp*/
+                border-radius: 10px;
                 padding: 8px 10px;
-                position: absolute;
-                bottom: 5.5%;
-                right: 10%;
+                border: none;
+                width: 10%;
+                background-color: antiquewhite;
+                /* position: absolute; */
+                /* bottom: 5.5%; */
+                /* right: 10%; */
+            }
+            .text-area{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 94%;
             }
             .popup-container{
                 position: fixed;
-                height: 100%;
-                width: 100%;
-                background-color: rgba(0,0,0, 0.6);
+                height: 100vh;
+                width: 100vw;
+                background-color: rgba(255, 255, 255, 0.6);
                 z-index: 1001;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             .popup-screen{
-                width: 350px;
-                height: 250px;
+                /*maintain 3:2 width:height*/
+                width: 390px;
+                height: 260px;
                 background-color: rgb(16, 67, 161);
                 border-radius: 10px;
                 box-shadow: 1px 4px 10px 3px;
-                position: absolute;
+                display: flex;
+                justify-content: space-around;
+                flex-direction: column;
+                align-items: center;
+                /* position: absolute;
                 left: 35%;
-                top: 30%;   
+                top: 30%;*/
             }
             .popup-screen h2{
                 font-family: Arial, Helvetica, sans-serif;
                 text-align: center;
                 color: antiquewhite;
-                
+                margin: 0%;
+                margin-top: 20px;
             }
             .popup-screen input{
                 font-size: larger;
-                position: absolute;
+                width: 65%;
+                border-radius: 10px;
+                padding: 5px;
+                border: none;
+                text-align: center;
+                /* position: absolute;
                 left: 15%;
-                top: 35%;
+                top: 35%; */
             }
             .popup-screen button{
-                background-color: white;
+                background-color: antiquewhite;
                 font-size: large;
                 border-radius: 10px;
                 padding: 4px 10px;
-                position: absolute;
+                width: 20%;
+                border: none;
+                /* position: absolute;
                 bottom: 30%;
-                left: 40%;
+                left: 40%; */
             }
             
         </style>
     </head>
     <body>
+        <script src="./socket.js"></script>
         <script>
             function check(){
                 if (document.getElementById('enter-name').value.length==0){ //enter-name refers to popup textbox
@@ -132,12 +164,12 @@
                 -->
             </div>
 
-            <div>
+            <div class="text-area">
                 <!-- ______________Textarea________________________-->
                 <textarea class="enter-box" style="resize: none;"></textarea>
                 <button type="submit">Enter</button>
-
             </div>
+
         </div>
     </body>
 </html>
