--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,7 @@
         </style>
     </head>
     <body>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="./socket.js"></script>
         <script>
             function check(){
