voting features done

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
             background-color: rgb(79, 163, 236);
             border-radius: 10px;
             position: absolute;
-            height: 86%;
-            width: 24%;
+            height: 86vh;
+            width: 24vw;
             right: 2%;
             top: 4%;
         }
@@ -26,11 +26,12 @@
         }
 
         .leaderboard div {
-            width: 100%;
-            height: min-content;
-            margin: 10px;
-            padding: 10px;
             background-color: antiquewhite;
+            height: max-content;
+            width: 80%;
+            padding: 5%;
+            margin: 5%;
+            border-radius: 10px;
         }
 
         .box-container {
@@ -53,10 +54,6 @@
             width: 94%;
             height: 70%;
             padding: 10px;
-            /* box-shadow: 0px 4px 8px 1px;*/
-            /* position: absolute; */
-            /* left: 4%; */
-            /* top: 5%; */
         }
 
         .box-container .enter-box {
@@ -65,9 +62,6 @@
             border-radius: 10px;
             width: 88%;
             background-color: antiquewhite;
-            /* position: absolute; */
-            /* left: 4%; */
-            /* bottom: 5%; */
         }
 
         .box-container button {
@@ -76,9 +70,6 @@
             border: none;
             width: 10%;
             background-color: antiquewhite;
-            /* position: absolute; */
-            /* bottom: 5.5%; */
-            /* right: 10%; */
         }
 
         .text-area {
@@ -110,9 +101,6 @@
             justify-content: space-around;
             flex-direction: column;
             align-items: center;
-            /* position: absolute;
-                left: 35%;
-                top: 30%;*/
         }
 
         .popup-screen h2 {
@@ -129,10 +117,7 @@
             border-radius: 10px;
             padding: 5px;
             border: none;
-            text-align: center;
-            /* position: absolute;
-                left: 15%;
-                top: 35%; */
+            text-align: center
         }
 
         .popup-screen button {
