--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
     <title>Story-Board</title>
     <style>
+        *{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
         body {
             background-color: rgb(0, 74, 134);
             margin: 0%;
@@ -20,7 +24,6 @@
         }
 
         .leaderboard h3 {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: antiquewhite;
             text-align: center;
         }
@@ -32,6 +35,15 @@
             padding: 5%;
             margin: 5%;
             border-radius: 10px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .leaderboard p {
+            font-weight: 400;
+            margin: 0%;
+            padding: 0%;
         }
 
         .box-container {
@@ -58,7 +70,6 @@
 
         .box-container .enter-box {
             font-size: large;
-            font-family: Arial, Helvetica, sans-serif;
             border-radius: 10px;
             width: 88%;
             background-color: antiquewhite;
@@ -104,7 +115,7 @@
         }
 
         .popup-screen h2 {
-            font-family: Arial, Helvetica, sans-serif;
+            /* font-family: Arial, Helvetica, sans-serif; */
             text-align: center;
             color: antiquewhite;
             margin: 0%;
@@ -148,17 +159,11 @@
                 socket.emit("new-player", userState, (gameState) => {
                     playerStates = gameState.playerStates;
                     addStoryToBox(gameState.story);
-                    updateLeaderBoard();
                 });
                 window.onclick = document.getElementById('submit-user').style.display = 'none';
             }
 
         }
-
-        socket.on('new-player-joined',playerList => {
-            playerStates = playerList;
-            updateLeaderBoard();
-        });
     </script>
     <!-- __________________ Starting Popup ______________ -->
     <div class="popup-container" id="submit-user">
@@ -178,13 +183,11 @@
         <!-- main story board-->
 
         <div class="voted-storybox" id = "voted-storybox">
-            <!-- Selected/voted sentences to be displayed here 
-                    ____White blank container to displaye voted sentences___
-                -->
+            <!-- Selected/voted sentences to be displayed here -->
         </div>
 
         <div class="text-area">
-            <!-- ______________Textarea________________________-->
+            <!-- ___________________Textarea________________________-->
             <textarea type = "text" class="enter-box" id = "enter-box" style="resize: none;"></textarea>
             <button class="input-button" onclick="sendStoryLine()">enter</button>
         </div>
