--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         }
 
         .leaderboard p {
-            font-weight: 400;
+            font-weight: 200;
             margin: 0%;
             padding: 0%;
         }
@@ -80,6 +80,7 @@
             padding: 8px 10px;
             border: none;
             width: 10%;
+            padding: 10px;
             background-color: antiquewhite;
         }
 
