--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         <div class="glass-container">
             <div class="popup-screen">
                 <h2>Enter Username</h2>
-                <input type="text" placeholder="Username" id="enter-name" required>
+                <input type="text" placeholder="Username" id="enter-name" required autocomplete="off">
                 <button type="submit" id="sub" onclick="check()">Enter</button>
             </div>
 
@@ -64,7 +64,7 @@
     <div class="game-title"> 
         <!-- Game title-->
         <div class="title-box">
-            <h1>Story-Board</h1>
+            <h1>Story Board</h1>
         </div>
     </div> 
 
