idk, I did something

--- a/public/index.html
+++ b/public/index.html
@@ -81,13 +81,13 @@
             <!-- Selected/voted sentences to be displayed here -->
         </div>
 
-        <div class="Pactivity-box">
+        <div class="Pactivity-box" id="Pactivity-box">
             <!-- Players activity to be displayed here-->
         </div>
 
         <div class="text-area">
             <!-- ___________________Textarea________________________-->
-            <textarea type = "text" class="enter-box" id = "enter-box" style="resize: none;" placeholder="Write story please"></textarea>
+            <textarea type = "text" class="enter-box" id = "enter-box" style="resize: none;"></textarea>
             <button class="input-button" onclick="sendStoryLine()">Enter</button>
         </div>
 
