added support for phone
>added support for phone
>added small bug fixes in css
>added player based line highlighting system

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,9 @@
                 <h3><b>How to Play?</b></h3>
                 <hr>
                 <ul>
-                    <li>Players will be given a piece of story.</li><br>
-                    <li>Enter your spice/part to the story in the "Text box".</li><br>
-                    <li>Once entered a session will be conducted among the players to<br>select/vote the wildest (is what I'd like to say) sentence to progress the story.</li><br>
+                    <li>Players will be given a piece of story.</li>
+                    <li>Enter your spice/part to the story in the "Text box".</li>
+                    <li>Once entered a session will be conducted among the players to select/vote the wildest (is what I'd like to say) sentence to progress the story.</li>
                     <li>The highest voted sentence is displayed in the story and progresses the story with the winning player scoring a point.</li>
                 </ul>
             </div>
@@ -122,7 +122,6 @@
     <!-- prevent player from interacting with the game -->
     <div class="prevent-player" id="prevent-player" onclick="alert(`voting in progress`)" onkeyup="alert(`voting in progress`)">
        <h2>Voting in progress....</h2>
-    
     </div>
 
     <!-- prevent player form playing -->
