updated some css more

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
         <div class="glass-container">
             <div class="popup-screen">
-                <h2>Enter Username</h2>
+                <h2>Enter Name and Colour</h2>
                 <p type="text" name="colour-selector-name" id="colour-selector-name">selct a colour</p>
                 <div class="colour-input">
                     <input type="color" name="colour-selector" id="colour-selector" onmouseleave="selectColour()">
