--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>Story Board</title>
-    <!-- ----------------------------------------------------------------------------------------------------------------------- -->
     <meta name="description"
         content="Story Board is a collaborative story writing game based on writing lines and voting for the best ones. Join and play with people around the world">
     <meta name="keywords"
@@ -14,15 +13,14 @@
     <meta property="og:title" content="Story-Board">
     <meta property="og:url" content="https://story-board-game.herokuapp.com/">
     <meta property="og:site_name" content="Story-Board">
-    <meta property="og:image" content="https://story-board-game.herokuapp.com/thumbnail.png">
+    <meta property="og:image" content="https://story-board.ml/thumbnail.png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Story Board - a collaborative story writing game">
     <meta name="twitter:description"
         content="Story Board is a collaborative story writing game based on writing lines and voting for the best ones. Join and play with people around the world">
-    <meta name="twitter:image" content="https://story-board-game.herokuapp.com/thumbnail.png">
-    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <meta name="twitter:image" content="https://story-board.ml/thumbnail.png">
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="story-board-icon.png" type="image/x-icon">
 </head>
