updated website for ahan

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
         <div class="creator-box">
             <span class="close" onclick="closepop()">+</span>
             
-            <a href="https://ahan.ml/">
+            <a href="https://ahanray.ml/">
                 <img src="Ahan.jpg">
             <h3 class="ahan">Ahan</h3>
 
